temporary fix to make the website readable

--- a/assets/dark.css
+++ b/assets/dark.css
@@ -2,7 +2,7 @@
 * {
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: rgba(16, 46, 67, 0.304);
+  -webkit-tap-highlight-color: #4f4f4f;
   -webkit-text-size-adjust: none;
   -webkit-touch-callout: none;
   box-sizing: border-box;
@@ -138,7 +138,7 @@ li input[type='checkbox'] {
   cursor: pointer;
 }
 .app-nav li ul {
-  background-color: #ffffff;
+  background-color: #4f4f4f;
   border: 1px solid #ddd;
   border-bottom-color: #ccc;
   border-radius: 4px;
@@ -207,13 +207,13 @@ main.hidden {
   transition: all 0.3s;
 }
 .anchor span {
-  color: #c8c8c8;
+  color: #FFFFFF;
 }
 .anchor:hover {
   text-decoration: underline;
 }
 .sidebar {
-  border-right: 1px solid rgba(0, 0, 0, 0.07);
+  border-right: 1px solid #4f4f4f;
   overflow-y: auto;
   padding: 40px 0 0;
   position: absolute;
@@ -272,14 +272,14 @@ main.hidden {
   border-radius: 4px;
 }
 .sidebar:hover::-webkit-scrollbar-thumb {
-  background: rgba(136,136,136,0.4);
+  background: #4f4f4f;
 }
 .sidebar:hover::-webkit-scrollbar-track {
-  background: rgba(136,136,136,0.1);
+  background: #4f4f4f;
 }
 .sidebar-toggle {
   background-color: transparent;
-  background-color: #282828;
+  background-color: #4f4f4f;
   border: 0;
   outline: none;
   padding: 10px;
@@ -375,7 +375,7 @@ body.sticky .sidebar-toggle {
 .markdown-section p.tip:before {
   background-color: #f66;
   border-radius: 100%;
-  color: #3f3f3f;
+  color: #FFFFFF;
   content: '!';
   font-family: 'Dosis', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   font-size: 14px;
@@ -392,7 +392,7 @@ body.sticky .sidebar-toggle {
   background-color: #efefef;
 }
 .markdown-section p.tip em {
-  color: #c8c8c8;
+  color: #FFFFFF;
 }
 .markdown-section p.warn {
   background: rgba(234,111,90,0.1);
@@ -575,7 +575,7 @@ section.cover .cover-main > p:last-child a {
 section.cover .cover-main > p:last-child a:last-child {
   background-color: #ea6f5a;
   background-color: var(--theme-color, #ea6f5a);
-  color: #fff;
+  color: #FFFFFF;
 }
 section.cover .cover-main > p:last-child a:last-child:hover {
   color: inherit;
@@ -599,13 +599,13 @@ body {
 /* sidebar */
 .sidebar {
   background-color: #282828;
-  color: #c8c8c8;
+  color: #FFFFFF;
 }
 .sidebar li {
   margin: 6px 15px 6px 0;
 }
 .sidebar ul li a {
-  color: #c8c8c8;
+  color: #FFFFFF;
   font-size: 14px;
   overflow: hidden;
   text-decoration: none;
@@ -656,7 +656,7 @@ body {
   font-size: 1rem;
 }
 .markdown-section h6 {
-  color: #777;
+  color: #FFFFFF;
   font-size: 1rem;
 }
 .markdown-section figure,
@@ -678,7 +678,7 @@ body {
 .markdown-section blockquote {
   border-left: 4px solid #ea6f5a;
   border-left: 4px solid var(--theme-color, #ea6f5a);
-  color: #858585;
+  color: #FFFFFF;
   margin: 2em 0;
   padding-left: 20px;
 }
@@ -690,12 +690,12 @@ body {
   margin: 1em 0;
 }
 .markdown-section em {
-  color: #7f8c8d;
+  color: #FFFFFF;
 }
 .markdown-section code {
   background-color: #282828;
   border-radius: 2px;
-  color: #eef0eb;
+  color: #FFFFFF;
   font-family: 'Roboto Mono', Monaco, courier, monospace;
   margin: 0 2px;
   padding: 3px 5px;
@@ -799,7 +799,7 @@ body {
   -webkit-font-smoothing: initial;
   background-color: #282828;
   border-radius: 2px;
-  color: #657b83;
+  color: #FFFFFF;
   display: block;
   font-family: 'Roboto Mono', Monaco, courier, monospace;
   font-size: 0.8rem;
@@ -835,11 +835,11 @@ pre::after {
   top: 0;
 }
 .markdown-section p.tip {
-  background-color: #282828;
-  color: #ffffff;
+  background-color: #4f4f4f;
+  color: #FFFFFF;
 }
 input[type='search'] {
   background: #4f4f4f;
   border-color: #4f4f4f;
-  color: #ffffff;
+  color: #FFFFFF;
 }
